<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="ninja.retrievr.retrievr.WriteActivity">


    <TextView
        android:id="@+id/textViewNewItemWelcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/newItemWelcome"
        android:textAlignment="center"
        android:textColor="@color/accent"
        android:textSize="30sp"
        android:gravity="center"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:id="@+id/textViewNewItemQuestion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="27dp"
        android:text="@string/newItemQuestion"
        android:textAlignment="center"
        android:textSize="20sp"
        android:gravity="center"
        android:layout_below="@+id/textViewNewItemWelcome"
        android:layout_centerHorizontal="true" />

    <EditText
        android:id="@+id/newItemNameEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/newItemHint"
        android:layout_below="@+id/textViewNewItemQuestion"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="48dp"
        />

    <ImageView
        android:id="@+id/newItemSquareReticule"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/square_reticule_content_description"
        android:src="@drawable/ic_square_reticule"
        android:layout_marginTop="26dp"
        android:layout_below="@+id/newItemNameEditText"
        android:layout_centerHorizontal="true"
        android:tint="@color/accent"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/rescan"
        android:id="@+id/textViewRescanNFC"
        android:gravity="center"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="27dp" />
</RelativeLayout>
